# reconstruction-server

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.mac_silicon  Dockerfile_GO  FilteredRefinedPointCloud.ply  Makefile  README.MD  display_result.py  global_main.py  ica-focus-dev-2-refined.json  ica_gbg_portals.json  ica_refined_aws_portals.csv  local_main.py  main.py  occlusion_box.py  panorama_main.py  scale_from_qrcode.py  simple_extract_feature.py  start_server.sh  test_splat_request.json  topology_main.py  update_main.py
.devcontainer/: build_golang_server.sh  build_server.sh  devcontainer.json  post_create.sh
.github/: CODEOWNERS
.github/workflows/: build-base-image.yml  ci-rust.yml  ci.yml  docker-build.yml  docker_build_and_push.yaml  tag.yml
challenge_scans/: refine.sh
charts/reconstruction-server/: Chart.yaml  todo.yaml  values.dev.0.yaml  values.dev.1.yaml  values.dev.yaml  values.legacy.yaml  values.prod.yaml  values.staging.yaml  values.yaml
charts/reconstruction-server/charts/: reconstruction-server-0.2.0.tgz
charts/reconstruction-server/charts/reconstruction-server/: Chart.yaml  values.yaml
charts/reconstruction-server/charts/reconstruction-server/scripts/: pre-install.sh
charts/reconstruction-server/charts/reconstruction-server/templates/: _helpers.tpl  hpa.yaml  ingress.yaml  podmonitor.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
config/k8s-config/: dp-mps-config.yaml
config/occlusion_box/: default.yaml  server_default.yaml
docker/: Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.jetson  Dockerfile.no_mkl  Dockerfile.nvcr_pytorch  Dockerfile_GO  Dockerfile_RUST
docs/: compute-capability.md  deployment.md  development.md  minimum-requirements.md
scripts/: all_servers_status.sh  build_and_push_ecr.sh  evaluate_refined_job.py  k8s.py  k8s_restart.py  local_run_all.sh  mp4debug.py  plot_portals_points.py  redeploy_server.sh  server_status.sh  start_sshd.sh  tag_and_push.sh
server/: Cargo.toml  go.mod  go.sum  helper.go  main.go
server/go/: go.mod  go.sum
server/rust/: .env.example  Cargo.toml  IMPLEMENTATION.md  Makefile  README.md  clippy.toml
server/rust/.cargo/: config.toml
server/rust/compute-node-common/: Cargo.toml  README.md
server/rust/compute-node-common/src/: lib.rs
server/rust/compute-node-common/src/dds/: register.rs
server/rust/compute-node-common/src/storage/: client.rs
server/rust/compute-node-common/tests/: config_tests.rs  dms_client_min.rs  dms_paths.rs  domain_client_http.rs  engine_dms_flow.rs  engine_registry.rs  engine_storage_ports.rs  error_types.rs  heartbeat_client.rs  heartbeat_loop.rs  heartbeat_scheduler.rs  http_endpoints.rs  poller_backoff.rs  runner_dispatch.rs  storage_errors.rs  storage_layout.rs  telemetry_init.rs  token_rotation.rs
server/rust/compute-runner-api/: Cargo.toml  README.md
server/rust/compute-runner-api/src/: lib.rs
server/rust/compute-runner-api/tests/: runner_api.rs
server/rust/runner-reconstruction-global/: Cargo.toml
server/rust/runner-reconstruction-global/src/: input.rs  lib.rs  output.rs  python.rs  strategy.rs  workspace.rs
server/rust/runner-reconstruction-legacy/: Cargo.toml  README.md
server/rust/runner-reconstruction-legacy-noop/: Cargo.toml  README.md
server/rust/runner-reconstruction-legacy-noop/src/: lib.rs
server/rust/runner-reconstruction-legacy-noop/tests/: smoke.rs
server/rust/runner-reconstruction-legacy/src/: domain_lookup.rs  input.rs  lib.rs  manifest.rs  output.rs  python.rs  refined.rs  strategy.rs  summary.rs  workspace.rs
server/rust/runner-reconstruction-legacy/tests/: config.rs  end_to_end.rs  input.rs  manifest.rs  output.rs  python.rs  refined.rs  skeleton.rs  workspace.rs
server/rust/runner-reconstruction-local/: Cargo.toml
server/rust/runner-reconstruction-local/src/: input.rs  lib.rs  refined.rs  workspace.rs
server/rust/runner-reconstruction-update/: Cargo.toml
server/rust/runner-reconstruction-update/src/: input.rs  lib.rs  output.rs  workspace.rs
server/rust/scripts/: mock_py_runner.py
server/rust/server-adapters/: Cargo.toml
server/rust/server-adapters/src/: config.rs  lib.rs
server/rust/server-adapters/src/auth/: mod.rs  siwe.rs  token_manager.rs
server/rust/server-adapters/src/dds/: http.rs  persist.rs  register.rs  state.rs
server/rust/server-adapters/src/dms/: client.rs  executor.rs  mod.rs  models.rs  poller.rs  redact.rs  session.rs
server/rust/server-adapters/src/http/: mod.rs
server/rust/server-adapters/src/storage/: mod.rs  token.rs
server/rust/server-adapters/tests/: dds_http_tests.rs  dms_client_tests.rs  dms_executor_tests.rs  dms_wiremock_smoke.rs  e2e_dds_dms_tests.rs  storage_http_domain_client_tests.rs
server/rust/server-bin/: Cargo.toml  README.md
server/rust/server-bin/src/: cli.rs  config.rs  main.rs
server/rust/server-bin/tests/: cli_job_request_tests.rs  e2e_smoke.rs  http_compat.rs  http_optional_fields.rs  http_parity.rs
server/rust/server-core/: Cargo.toml
server/rust/server-core/src/: errors.rs  lib.rs  manifest.rs  types.rs  usecases.rs
server/src/: global_refinement.rs  local_refinement.rs  main.rs  utils.rs
src/: .clang-tidy  CMakeLists.txt  cost_functions.h  cost_functions_binds.cpp  ply_export.cpp  reconstruction_merge.cpp
src/cmake/modules/: sophus.cmake
src/hloc_extra/extractors/: aliked_cpp.py
src/hloc_extra/matchers/: lightglue_cpp.py
src/hloc_extras/: lightglue.py  superpoint.py
utils/: aruco_detection.py  bundle_adjuster.py  cost_utils.py  data_utils.py  dataset_utils.py  densification.py  densification.py.orig  evaluation_utils.py  geometry_utils.py  io.py  local_bundle_adjuster.py  marker_utils.py  occlusion_box_utils.py  pairs_from_sequential.py  pairs_from_voxelized_covisibility.py  panorama_utils.py  point_cloud_utils.py  refinement_util.py  scan_alignment.py  splatter.py  topology_utils.py  triangulation.py  visualization.py  voxel_raycast_utils.py
