[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
networking = { git = "https://github.com/aukilabs/posemesh.git", rev = "5512cf097bf262130c95296b77c93d9bc2b384f6" }
futures = "0.3.30"
domain = { git = "https://github.com/aukilabs/posemesh.git", rev = "5512cf097bf262130c95296b77c93d9bc2b384f6" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = "1.44.0"
quick-protobuf = "0.8.1"
serde = "1.0.210"
serde_json = "1.0.128"
zip = "2.2.3"
regex = "1.10.3"
scopeguard = "1.2.0"
async-trait = "0.1.88"
