[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
posemesh-networking = { git = "https://github.com/aukilabs/posemesh.git", rev = "a6acafc44ede38afe07c4887b139186358f6d02c" }
futures = "0.3.30"
posemesh-domain = { git = "https://github.com/aukilabs/posemesh.git", rev = "a6acafc44ede38afe07c4887b139186358f6d02c" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = "1.44.0"
quick-protobuf = "0.8.1"
serde = "1.0.210"
serde_json = "1.0.128"
zip = "2.2.3"
regex = "1.10.3"
scopeguard = "1.2.0"
async-trait = "0.1.88"
