[workspace]
members = [
    "server-core",
    "server-adapters",
    "server-bin",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Auki Labs"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
async-trait = "0.1"
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt","json"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json","stream","gzip","brotli","deflate","rustls-tls","multipart"] }
uuid = { version = "1", features = ["v4","serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
zip = "2"
walkdir = "2.5"
regex = "1.10"
base64 = "0.22"
secp256k1 = { version = "0.28", features = ["recovery"] }
rand = "0.8"
tokio-util = "0.7"

[workspace.lints.rust]
warnings = "deny"
