[workspace]
members = [
    "runner-reconstruction-legacy",
    "runner-reconstruction-legacy-noop",
    "bin",
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false

# Metadata used by scripts/CI; clippy warnings are denied via CI commands.
[workspace.metadata.ci]
deny-warnings = true
