[package]
name = "compute-node-common"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
compute-runner-api = { path = "../compute-runner-api" }
anyhow = "1"
thiserror = "1"
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "macros", "fs", "signal"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
axum = { version = "0.7" }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "json", "env-filter"] }
tracing = "0.1"
posemesh-node-registration = "0.1.3"
semver = "1"
hex = "0.4"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha3 = "0.10"
rand = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
multer = "2.1.0"
regex = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
once_cell = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "test-util"] }
httpmock = "0.7"
tower = "0.5"
runner-reconstruction-legacy-noop = { path = "../runner-reconstruction-legacy-noop" }
futures = "0.3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3"

[features]
metrics = []

[package.metadata]
description = "Node engine: config, DDS/DMS, heartbeat, storage (no persistence)."
