[package]
name = "compute-runner-api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata]
description = "Runner trait + ports + shared types (no HTTP)."

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
