[package]
name = "runner-reconstruction-global"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
compute-runner-api = { package = "posemesh-compute-node-runner-api", version = "0.1.2", path = "../../../../posemesh/core/compute-node-runner-api" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
posemesh-domain-http = { version = "1.5.2", path = "../../../../posemesh/core/domain-http" }
uuid = { version = "1", features = ["v4"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[package.metadata]
description = "Scaffold runner for global refinement, no HTTP wiring."
