[package]
name = "runner-reconstruction-legacy-noop"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
compute-runner-api = { package = "posemesh-compute-node-runner-api", version = "0.1.2" }
tokio = { version = "1", features = ["time"] }
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[package.metadata]
description = "Optional legacy reconstruction noop runner, no HTTP wiring."
