[package]
name = "runner-reconstruction-legacy"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
compute-runner-api = { path = "../compute-runner-api" }
anyhow = "1"
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
uuid = { version = "1", features = ["serde", "v4"] }

[package.metadata]
description = "Reconstruction-specific runner (legacy), no HTTP wiring."
