[package]
name = "runner-reconstruction-legacy"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
compute-runner-api = { package = "posemesh-compute-node-runner-api", version = "0.1.2" }
anyhow = "1"
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
posemesh-domain-http = "1.3.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
hyper = { version = "0.14", default-features = false, features = ["server", "http1", "tcp"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

[package.metadata]
description = "Reconstruction-specific runner (legacy), no HTTP wiring."
