[package]
name = "server-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
server-core = { path = "../server-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
mime = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4","serde"] }
async-trait = "0.1"
zip = { workspace = true }
regex = { workspace = true }

[features]
grpc = []
ws = []
metrics = []
compat = ["server-core/compat"]
openapi = []
