[package]
name = "server-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
server-core = { path = "../server-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter","fmt","json"] }
reqwest = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4","serde"] }
async-trait.workspace = true
zip = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
posemesh-node-registration = "0.1.2"

[features]
grpc = []
ws = []
metrics = []
openapi = []

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
