[package]
name = "server-bin"
version = "0.1.0"
edition = "2021"
default-run = "server-bin"

[dependencies]
server-core = { path = "../server-core" }
server-adapters = { path = "../server-adapters" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter","fmt","json"] }
clap = { workspace = true, features = ["derive","env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
axum = { workspace = true }
