[package]
name = "server-bin"
version = "0.1.0"
edition = "2021"
default-run = "server-bin"

[features]
default = []
metrics = ["server-adapters/metrics"]

[dependencies]
server-core = { path = "../server-core" }
server-adapters = { path = "../server-adapters" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter","fmt","json"] }
clap = { workspace = true, features = ["derive","env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
walkdir = { workspace = true }
