[package]
name = "server-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4","serde"] }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true, features = ["macros","rt","time"] }
base64 = "0.22"
zip = "2"
walkdir = "2.5"
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros","rt","rt-multi-thread","time","test-util"] }
tempfile = "3"

[features]
compat = []
