[package]
name = "server-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4","serde"] }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
async-trait.workspace = true
tokio = { workspace = true, features = ["macros","rt","time"] }
tokio-util = { workspace = true }
base64.workspace = true
zip.workspace = true
walkdir.workspace = true
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros","rt","rt-multi-thread","time","test-util"] }
tempfile = "3"
